[package]
name = "jaksim-api"
version = "0.1.0"
authors = ["XiNiHa <anesin1109@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket_async = { git = "https://github.com/graphql-rust/juniper" }
