[package]
name = "jaksim-api"
version = "0.1.0"
authors = ["XiNiHa <anesin1109@naver.com>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
async-graphql = { git = "https://github.com/async-graphql/async-graphql" }
async-graphql-rocket = { git = "https://github.com/async-graphql/async-graphql" }
